# c-lex-syntax

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
code_examples/: arithmetic_expression.c  conditional.c  double_operators.c  ex1.c  ex2.c  ex3.c  factorial.c  fibonacci.c  indexation.c  invalid_arithmetic_expression.c  invalid_conditional.c  invalid_indexation.c  invalid_let.c  invalid_while.c  iteration.c  let_assign.c  let_assign_expression.c  multiple_errors.c
lexer/: keywords.py  lexical_code_scanner.py  operators.py  scanner.py  token.py
syntax/: node.py  parser.py  tree.py
