[project]
name = "c-lex-syntax"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonatha Targino",email = "jonatha.targino62@aluno.ifce.edu.br"},
    {name = "Jorge Vitor", email = "jorge.vitor.aguiar08@aluno.ifce.edu.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib (>=3.10.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
